# obs-nl-controller

./: CMakeLists.txt
include/: nlp_parser.hpp  obs_controller.hpp
src/: main.cpp  nlp_parser.cpp  obs_controller.cpp
test-run/obs-nl-controller-linux/: obs-nl-controller
ui/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
